fixing checkboxes so that they are vertical instead of horizontal + wrap

--- a/app/css/browse.scss
+++ b/app/css/browse.scss
@@ -3,3 +3,8 @@ ul {
     display: inline;
   }
 }
+
+span.filter_container {
+  float: left;
+  
+}
